deriving/tests/rejected/enum1.ml
(* enum for records *)
type r = { x : int } deriving (Enum)
